<!--
@author Breno Marques
@version 1.00
@since Release 01
-->
<resources>
    <string name="app_name">OHA Supervisory</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_user_sep">User</string>

    <string name="action_energy">Energy</string>
    <string name="action_bill">Bill</string>
    <string name="action_alert">Alert</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>git
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_details">MORE DETAILS</string>
    <string name="action_accept">ACCEPT</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_restore_database">Restore Database</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>

    <!--Mensagens de erro referente ao processo leitura do log de consumo de energia-->
    <string name="exception_on_parse_content_invalid">Content of the power consumption log is invalid!</string>

    <string name="content_authority_energy_use">br.com.brolam.oha.supervisory.energy.use</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Energy Use Sync Preferences Settings -->
    <string name="pref_header_energy_use_sync">Energy Use Logger</string>
    <string name="pref_title_energy_use_sync_setup_mode">Enable setup mode?</string>
    <string name="pref_description_energy_use_sync_setup_mode">The setup mode will stop the synchronization for configuration!.</string>
    <string name="pref_host_name_energy_use_sync">Host Name or IP</string>
    <string name="pref_host_name_energy_use_sync_default">192.168.4.1</string>
    <string name="pref_date_energy_use_sync">Current Sync Date</string>
    <string name="pref_sequence_energy_use_sync">Current Sync Sequence</string>

    <string name="pref_title_hour_energy_use_sync">Current Sync Hour</string>
    <string-array name="pref_titles_hour_energy_use_sync">
        <item>00 Hour</item>
        <item>01 Hour</item>
        <item>02 Hours</item>
        <item>03 Hours</item>
        <item>04 Hours</item>
        <item>05 Hours</item>
        <item>06 Hours</item>
        <item>07 Hours</item>
        <item>08 Hours</item>
        <item>09 Hours</item>
        <item>10 Hours</item>
        <item>11 Hours</item>
        <item>12 Hours</item>
        <item>13 Hours</item>
        <item>14 Hours</item>
        <item>15 Hours</item>
        <item>16 Hours</item>
        <item>17 Hours</item>
        <item>18 Hours</item>
        <item>19 Hours</item>
        <item>20 Hours</item>
        <item>21 Hours</item>
        <item>22 Hours</item>
        <item>23 Hours</item>
    </string-array>

    <string-array name="pref_values_hour_energy_use_sync">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string name="pref_title_energy_use_sync_volts">Standard voltage</string>
    <string-array name="pref_titles_energy_use_sync_volts">
        <item>110 Volts</item>
        <item>220 Volts</item>
    </string-array>

    <string-array name="pref_values_energy_use_sync_volts">
        <item>110</item>
        <item>220</item>
    </string-array>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="pref_title_energy_use_sync_often_logger_reset">Often Logger reset every %s </string>
    <string name="pref_summary_energy_use_sync_often_logger_reset">Logger running %.2f hours</string>
    <string-array name="pref_titles_energy_use_sync_often_logger_reset">
        <item>24 Hours</item>
        <item>48 Hours</item>
        <item>62 Hours</item>
    </string-array>

    <string-array name="pref_values_energy_use_sync_often_logger_reset">
        <item>24</item>
        <item>48</item>
        <item>62</item>
    </string-array>

    <!-- Backup Preferences Settings -->
    <string name="pref_header_backup">Backup</string>
    <string name="pref_title_backup_activated">Automatic Backup</string>
    <string name="pref_description_backup_activated">Perform an automatic backup of the database on the SD card.</string>

    <string name="pref_title_backup_frequency">Backup Frequency</string>
    <string-array name="pref_titles_backup_frequency">
        <item>Every 12 hours</item>
        <item>Every 24 hours</item>
        <item>Every 48 hours</item>
    </string-array>

    <string-array name="pref_values_backup_frequency">
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>

    <string name="pref_energy_use_sync_days_sd_card_stored">Number of storage days on SD Card</string>
    <string name="pref_energy_use_sync_days_sd_card_stored_default">3</string>
    <string name="pref_energy_use_sync_days_sd_card_stored_summary">Store up to %s day(s). Next log to be delete %s</string>
    <string name="pref_energy_use_sync_sensor_to_amperes">Set the convection of sensors average values to amperes</string>
    <string name="pref_energy_use_sensor_to_amperes_default">0.089125</string>

    <!-- Tela Principal -->
    <string name="main_activity_request_delete_energy_use_bill">Energy Bill %s, Confirm the deletion?</string>
    <string name="main_activity_request_backup_database">Confirm the backup</string>
    <string name="main_activity_request_backup_database_started">Backup has started.</string>
    <string name="main_activity_request_restore_database">Confirm backup restore %s</string>
    <string name="main_activity_request_restore_database_started">Backup Restore has started.</string>
    <string name="main_activity_message_automatic_backup_denied">Automatic backup was disabled!</string>
    <string name="main_activity_message_backup_denied">Backup was canceled!</string>
    <string name="main_activity_message_restore_denied">Restore was canceled!</string>
    <string name="main_activity_message_login_success">Welcome!</string>
    <string name="main_activity_message_login_fail">Something went wrong!</string>
    <string name="main_activity_message_logout_success">Goodbye</string>

    <!-- Energy Use Columns -->
    <string name="hour">Hour</string>
    <string name="read">Read</string>
    <string name="wh_phase1">Wh(1)</string>
    <string name="wh_phase2">Wh(2)</string>
    <string name="wh_phase3">Wh(3)</string>
    <string name="kwh">Kwh</string>
    <string name="cost">Cost</string>
    <string name="watts">Watts</string>

    <!-- Energy Use Columns Watts filter -->
    <string name="energy_Use_Column_filter_none">None</string>
    <string name="energy_Use_Column_filter_phase1">Phase1</string>
    <string name="energy_Use_Column_filter_phase2">Phase2</string>
    <string name="energy_Use_Column_filter_phase3">Phase3</string>
    <string name="energy_Use_Column_filter_total">Total</string>

    <!-- Energy Use Filter -->
    <string name="energy_use_log_filter_fragment_begin_time">Begin time</string>
    <string name="energy_use_log_filter_fragment_end_time">End time</string>
    <string name="energy_use_log_filter_fragment_phases">Select a phase</string>
    <string name="energy_use_log_filter_fragment_WattsGreaterEqual_hint">Watts greater or equal</string>
    <string name="energy_use_log_filter_fragment_WattsLessEqual_hint">Watts less or equal</string>

    <!-- Energy Use Day Card -->
    <string name="energy_use_day_card_body" formatted="false">Kwh %s Avg %s per hour</string>
    <string name="energy_use_day_card_title_max_watts" >Max. Watts</string>

    <!-- Energy Use Bill Card -->
    <string name="energy_use_bill_card_title" formatted="false">%s to %s</string>
    <string name="energy_use_bill_card_title_max_watts" >Max. Watts</string>
    <string name="energy_use_bill_card_read" formatted="false">Read %s of %s days</string>
    <string name="energy_use_bill_card_body" formatted="false">Kwh %s Avg %s per day</string>

    <!-- Energy Use Bill Add and Update -->
    <string name="fragment_energy_use_bill_begin_date">Begin date</string>
    <string name="fragment_energy_use_bill_end_date">End date</string>
    <string name="fragment_energy_use_bill_kwh_cost">Kwh cost</string>

</resources>
