<?xml version="1.0" encoding="utf-8"?><!--
@author Breno Marques
@version 1.00
@since Release 01
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_energy_use_day"
            android:icon="@drawable/ic_energy_black"
            android:title="@string/action_energy" />
        <item
            android:id="@+id/nav_energy_use_bill"
            android:icon="@drawable/ic_bill_black"
            android:title="@string/action_bill" />
        <item
            android:id="@+id/nav_altert"
            android:icon="@drawable/ic_alert_black"
            android:title="@string/action_alert" />
    </group>

    <item android:title="@string/app_name">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/action_settings" />

            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup_black"
                android:title="@string/action_backup" />

            <item
                android:id="@+id/nav_restore"
                android:icon="@drawable/ic_restore_black"
                android:title="@string/action_restore" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_user_sep">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login_black"
                android:title="@string/action_login" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_black"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
