<?xml version="1.0" encoding="utf-8"?><!--
@author Breno Marques
@version 1.00
@since Release 01
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_details"
        android:orderInCategory="100"
        android:title="@string/action_details"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/ic_chart_black"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always"/>
</menu>
