<?xml version="1.0" encoding="utf-8"?><!--
Exibir uma linha com os títulos dos totais de utilização de energia por Watts Horas em telas menores que 480dp.
@author Breno Marques
@version 1.00
@since Release 01
-->
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <RadioButton
        android:id="@+id/radioButtonHour"
        style="@style/AppTheme.Col.EnergyUse.RadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewHour"
        style="@style/AppTheme.Col.Title.EnergyUse.Hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hour" />

    <TextView
        style="@style/AppTheme.Col.Title.EnergyUse.Duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <TextView
        style="@style/AppTheme.Col.Title.EnergyUse.Kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kwh" />

    <TextView
        style="@style/AppTheme.Col.Title.EnergyUse.Cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cost" />

</TableRow>
