<?xml version="1.0" encoding="utf-8"?><!--
Layout para adicionar ou alterar uma Conta de Energia: OhaEnergyUseBillFragment
@author Breno Marques
@version 1.00
@since Release 01
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.brolam.oha.supervisory.ui.fragments.OhaEnergyUseBillFragment">

    <LinearLayout
        android:id="@+id/linearLayoutRangeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_energy_use_bill_begin_date" />

            <RadioButton
                android:id="@+id/radioButtonFromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="23, Jan 2017" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_energy_use_bill_end_date" />

            <RadioButton
                android:id="@+id/radioButtonToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="23, Fev 2017" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutKwhCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutRangeDate"
        android:layout_marginTop="@dimen/default_text_margin">

        <EditText
            android:id="@+id/editKwhCost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_energy_use_bill_kwh_cost"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutKwhCost"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
